--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ flexibility(document.documentElement);
 <div class="wp-block-uagb-container uagb-block-5f2c715b">
 <div class="wp-block-uagb-counter uagb-block-5c630d61 wp-block-uagb-counter--number">
 <div class="wp-block-uagb-counter__number">
-<span class="uagb-counter-block-number" data-duration="1.5" data-to-value="15" data-from-value="0" data-delimiter=","></span><span class="uagb-counter-block-suffix">+</span>
+<span class="uagb-counter-block-number" data-duration="1.5" data-to-value="20" data-from-value="0" data-delimiter=","></span><span class="uagb-counter-block-suffix">+</span>
 </div>
 <div class="wp-block-uagb-counter__title">Years of Experience</div>
 </div>
@@ -360,7 +360,7 @@ flexibility(document.documentElement);
 <div class="wp-block-uagb-container uagb-block-b655e291">
 <div class="wp-block-uagb-counter uagb-block-4b9ed742 wp-block-uagb-counter--number">
 <div class="wp-block-uagb-counter__number">
-<span class="uagb-counter-block-number" data-duration="1.5" data-to-value="700" data-from-value="0" data-delimiter=","></span><span class="uagb-counter-block-suffix">+</span>
+<span class="uagb-counter-block-number" data-duration="1.5" data-to-value="500" data-from-value="0" data-delimiter=","></span><span class="uagb-counter-block-suffix">+</span>
 </div>
 <div class="wp-block-uagb-counter__title">Happy Customers</div>
 </div>
@@ -371,7 +371,7 @@ flexibility(document.documentElement);
 <div class="wp-block-uagb-container uagb-block-970f5855">
 <div class="wp-block-uagb-counter uagb-block-5d0f66d6 wp-block-uagb-counter--number">
 <div class="wp-block-uagb-counter__number">
-<span class="uagb-counter-block-number" data-duration="1.5" data-to-value="20" data-from-value="0" data-delimiter=","></span><span class="uagb-counter-block-suffix">+</span>
+<span class="uagb-counter-block-number" data-duration="1.5" data-to-value="" data-from-value="10" data-delimiter=","></span><span class="uagb-counter-block-suffix">+</span>
 </div>
 <div class="wp-block-uagb-counter__title">Team Members</div>
 </div>
