--- a/about/index.html
+++ b/about/index.html
@@ -280,7 +280,7 @@ flexibility(document.documentElement);
 <span class="uagb-ifb-title-prefix">Get In Touch</span><h2 class="uagb-ifb-title">Start Your Journey Towards Enhanced IT Solutions Today!</h2>
 </div>
 <p class="uagb-ifb-desc">Contact us now to discover how Xebec Systems can elevate your business operations with our expert solutions and dedicated support.</p>
-<div class="uagb-ifb-button-wrapper wp-block-button"><a href="../about/contact/" class="uagb-infobox-cta-link wp-block-button__link" target="_self" rel="noopener noreferrer" onclick="return true;"><span class="uagb-inline-editing">Get Started</span></a></div>
+<div class="uagb-ifb-button-wrapper wp-block-button"><a href="../contact/" class="uagb-infobox-cta-link wp-block-button__link" target="_self" rel="noopener noreferrer" onclick="return true;"><span class="uagb-inline-editing">Get Started</span></a></div>
 </div></div>
 </div></div>
 
