--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="profile" href="https://gmpg.org/xfn/11"> 
+	<link rel="profile" href="https://gmpg.org/xfn/11">
 	<title>Xebec Systems</title>
 <meta name="robots" content="max-image-preview:large">
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
@@ -241,8 +241,8 @@ flexibility(document.documentElement);
 
 <div class="wp-block-uagb-container uagb-block-5e3fcc06">
 <div class="wp-block-uagb-info-box uagb-block-6a943a8f uagb-infobox__content-wrap  uagb-infobox-icon-above-title uagb-infobox-image-valign-top"><div class="uagb-ifb-content">
-<div class="uagb-ifb-title-wrap"><h3 class="uagb-ifb-title">Business Email/Cloud Backup </h3></div>
-<p class="uagb-ifb-desc">Reliable email subscription management for AWS, Microsoft 365 and Google Workspace.</p>
+<div class="uagb-ifb-title-wrap"><h3 class="uagb-ifb-title">Managed Cloud Solustions </h3></div>
+<p class="uagb-ifb-desc">Reliable Business emails and managed cloud backup on AWS, Microsoft 365 and Google Workspace.</p>
 <div class="uagb-ifb-button-wrapper wp-block-button"><a href="./services/" target="_self" onclick="return true;" class="uagb-infobox-cta-link" rel="noopener noreferrer"><span class="uagb-inline-editing">Read More</span></a></div>
 </div></div>
 </div>
