--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@ flexibility(document.documentElement);
 
 <div class="wp-block-uagb-container uagb-block-5e3fcc06">
 <div class="wp-block-uagb-info-box uagb-block-6a943a8f uagb-infobox__content-wrap  uagb-infobox-icon-above-title uagb-infobox-image-valign-top"><div class="uagb-ifb-content">
-<div class="uagb-ifb-title-wrap"><h3 class="uagb-ifb-title">Email + Cloud Backup</h3></div>
-<p class="uagb-ifb-desc">Reliable Business emails and managed cloud backup solutions on AWS, Google Workspace and Microsoft 365. </p>
+<div class="uagb-ifb-title-wrap"><h3 class="uagb-ifb-title">Email and Cloud Solutions</h3></div>
+<p class="uagb-ifb-desc">Reliable Business emails and managed cloud solutions on AWS, Google Workspace and Microsoft 365. </p>
 <div class="uagb-ifb-button-wrapper wp-block-button"><a href="./services/" target="_self" onclick="return true;" class="uagb-infobox-cta-link" rel="noopener noreferrer"><span class="uagb-inline-editing">Read More</span></a></div>
 </div></div>
 </div>
