--- a/services/index.html
+++ b/services/index.html
@@ -218,9 +218,9 @@ flexibility(document.documentElement);
 <div class="wp-block-uagb-info-box uagb-block-5cee2c08 uagb-infobox__content-wrap  uagb-infobox-icon-above-title uagb-infobox-image-valign-top"><div class="uagb-ifb-content">
 <div class="uagb-ifb-title-wrap">
 <h2 class="uagb-ifb-title-prefix">01</h2>
-<h3 class="uagb-ifb-title">Email Subscription Services</h3>
+<h3 class="uagb-ifb-title">Managed Email, Cloud Backup & Compute Solutions</h3>
 </div>
-<p class="uagb-ifb-desc">Xebec Systems provides comprehensive email subscription services, ensuring seamless integration and management for Microsoft 365 and Google Workspace users. Our solutions are designed to enhance productivity while offering customizable plans to suit your business needs, ensuring you never miss a critical communication.</p>
+<p class="uagb-ifb-desc">Xebec Systems provides comprehensive email subscription services, ensuring seamless integration and management for Microsoft 365 and Google Workspace users. In addition, we offer fully managed cloud backup and compute solutions designed to enhance productivity, ensure data protection, and support scalable business operations. Our customizable plans ensure you never miss a critical communication or compromise on performance.</p>
 </div></div>
 </div>
 </div>
