--- a/services/index.html
+++ b/services/index.html
@@ -220,7 +220,7 @@ flexibility(document.documentElement);
 <h2 class="uagb-ifb-title-prefix">01</h2>
 <h3 class="uagb-ifb-title">Managed Email, Cloud Backup & Compute Solutions</h3>
 </div>
-<p class="uagb-ifb-desc">Xebec Systems provides comprehensive email subscription services, ensuring seamless integration and management for Microsoft 365 and Google Workspace users. In addition, we offer fully managed cloud backup and compute solutions designed to enhance productivity, ensure data protection, and support scalable business operations. Our customizable plans ensure you never miss a critical communication or compromise on performance.</p>
+<p class="uagb-ifb-desc">Xebec Systems provides comprehensive email subscription services, ensuring seamless integration and management for Microsoft 365 and Google Workspace users. In addition, we offer fully managed cloud backup and compute solutions on AWS and Wasabi S3 designed to enhance productivity, ensure data protection, and support scalable business operations. Our customizable plans ensure you never miss a critical communication or compromise on performance.</p>
 </div></div>
 </div>
 </div>
